*Rails 3.1.0 (unreleased)*

* ActiveSupport::Dependencies::ClassCache class has been introduced for
holding references to reloadable classes.

* ActiveSupport::Dependencies::Reference has been refactored to take direct
advantage of the new ClassCache.

* Backports Range#cover? as an alias for Range#include? in Ruby 1.8 [Diego Carrion, fxn]

* Added weeks_ago and prev_week to Date/DateTime/Time. [Rob Zolkos, fxn]

* Added before_remove_const callback to ActiveSupport::Dependencies.remove_unloadable_constants! [Andrew White]

*Rails 3.0.2 (unreleased)*

* Added before_remove_const callback to ActiveSupport::Dependencies.remove_unloadable_constants! [Andrew White]

*Rails 3.0.1 (October 15, 2010)*

* No Changes, just a version bump.

*Rails 3.0.0 (August 29, 2010)*

* Implemented String#strip_heredoc. [fxn]

* Pluggable cache stores: setting config.cache_store = "custom_store" will require 'active_support/cache/custom_store' and look for the CustomStore constant.  #5486 [Mike Perham]

* Removed Object#returning, Object#tap should be used instead. [Santiago Pastorino]

* Deprecation behavior is no longer hardcoded to the name of the environment.
  Instead, it is set via config.active_support.deprecation and can be one
  of :log, :stderr or :notify. :notify is a new style that sends the warning
  via ActiveSupport::Notifications, and is the new default for production
  [Yehuda Katz]

* Renamed ActiveSupport::Dependecies.load_(once_)paths to autoload_(once_)paths. [fxn]

* Added ActiveSupport::FileUpdateChecker to execute a block only if a set of files changed, used by Router and I18n locale files. [José Valim]

* Added ActiveSupport::DescendantsTracker to track descendants with support to constants reloading. [José Valim]

* ActiveSupport::OrderedHash#merge and #merge! accept a block. #4838 [Paul Mucur, fxn]

* Date#since, #ago, #beginning_of_day, #end_of_day, and #xmlschema honor now the user time zone if set. [Geoff Buesing]
